--- a/views/home.ejs
+++ b/views/home.ejs
@@ -116,6 +116,8 @@
 
     <!-- Fin Jeux -->
 
+    <div class="end"></div>
+
     <!-- Fin du contenu de la page -->
 
     <%- include('../views/layouts/footer.ejs'); -%>
