--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -18,10 +18,11 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <!-- Fichier CSS version TEST-->
+  <!-- Fichier CSS -->
 
   <link href="./css/style.css" rel="stylesheet">
   <link href="./css/navbar.css" rel="stylesheet">
+  <link href="./css/footer.css" rel="stylesheet">
 
 </head>
 
@@ -76,7 +77,7 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/Dames.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                  <h5> <a href="#" class="text-dark">Dames</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                   <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
@@ -90,7 +91,7 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/echecs.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                  <h5> <a href="#" class="text-dark">Echecs</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                   <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
@@ -101,7 +102,7 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/morpion.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                  <h5> <a href="#" class="text-dark">Morpion</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                   <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
@@ -129,9 +130,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-      <!-- Fichiers JS -->
 
-      <script src="./js/myscript.js"></script>
 
 </body>
 
