--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -23,7 +23,7 @@
 
             <% if(isLoggedIn) { %>
               <li class="nav-item">
-                <a class="nav-link" href="">Profil</a>
+                <a class="nav-link" href="/Profil">Profil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/logout">Déconnexion</a>
@@ -34,5 +34,7 @@
     </div>
   </div>
 </nav>
+
+<script src="./js/myscript.js"></script>
 
 <!-- Fin NavBar -->
