--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,7 +68,7 @@
                     class="img-fluid card-img-top">
                   <h5> <a href="#" class="text-dark">Sudoku</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
+                  <a href="/sudoku"><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
               <!-- End -->
