--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,15 +8,11 @@ html, body {
 
 /* Début de Haut de page */
 
-.carousel-caption {
-	top: 275px;
-}
 
 .carousel-caption h1 {
 	font-size: 45px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	margin: 1.5em 3em 1em 3em;
 	font-family: merienda;
 }
 
@@ -35,11 +31,6 @@ html, body {
 	max-height: 975px;
 }
 
-@media only screen and (max-width: 1280px) {
-	.carousel-caption {
-		top: auto;
-	}
-}
 
 
 /* Début titre animation */
@@ -56,6 +47,8 @@ a {
 
 .title {
 	font-size: 90px;
+	margin-top: 100px;
+	position:static;
 }
 
 p:nth-child(1) a {
@@ -102,12 +95,9 @@ p a {
 	}
 }
 
-/*REEEEEEEEEEESPONSIVE*/
 
 @media (max-width: 650px) {
-	#container {
-		width: 100%;
-	}
+
 	p {
 		font-size: 3.5em;
 	}
