--- a/views/home.ejs
+++ b/views/home.ejs
@@ -66,8 +66,10 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/sudoku.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                  <h5 class="subTitleG">Sudoku</h5>
+                  <p class="small text-muted mb-0" id="descriptG">
+                    Vous aimez les chiffres ? <br> Battez tous les records avec le fameux sudoku
+                  </p>
                   <a href="/sudoku"><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
@@ -77,8 +79,10 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/Dames.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Dames</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                  <h5 class="subTitleG">Dames</h5>
+                  <p class="small text-muted mb-0" id="descriptG">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                  </p>
                   <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
@@ -91,8 +95,11 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/echecs.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Echecs</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                  <h5 class="subTitleG">Échecs</h5>
+                  <p class="small text-muted mb-0" id="descriptG">
+                    Êtes-vous un stratège aguerri ? Imbattable ?<br> Venez nous le prouver 
+                    avec le jeu de stratégie indémodable que sont les échecs !
+                  </p>
                   <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
@@ -102,9 +109,11 @@
               <div class="col-xl col-lg-4 col-md-6 mb-4">
                 <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/morpion.jpg" alt="Sudoku"
                     class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Morpion</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
+                  <h5 class="subTitleG">Puissance 4</h5>
+                  <p class="small text-muted mb-0" id="descriptG">
+                    
+                  </p>
+                  <a href="/puissance4"><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
               <!-- End -->
