--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -4,7 +4,7 @@
 <head>
 	<title> sudoku test</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" href="./css/sudoku.css" />
+	<link rel="stylesheet" href="./css/gamesCSS/sudoku.css" />
 	<script type="application/javascript" src="./js/games/sudoku.js"></script>
 </head>
 
