--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,120 +1,48 @@
 <!-- Début Footer -->
 
 <footer id="footer" class="container-fluid bg-grey py-5">
+    <img class="logo" src="./img/logo.png" alt="logo" align=left>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-6 ">
-                        <div class="logo-part">
-                            <img src="./img/logo.png" class="w-50 logo-footer">
-                            <p>7637 Laurel Dr. King Of Prussia, PA 19406</p>
-                            <p>Use this tool as test data for an automated system or find your next pen</p>
+                        <h6>No Brain No Gain</h6>
+                        <div class="block">
+                            <p>No brain no gain, le site de jeux intéractif en ligne</p>
+                            <p>vient tester tes limites et te retourner le cerveau</p>
                         </div>
                     </div>
                     <div class="col-md-6 px-4">
-                        <h6> About Company</h6>
-                        <p>But horizontal lines can only be a full pixel high.</p>
-                        <a href="#" class="btn-footer"> More Info </a><br>
-                        <a href="#" class="btn-footer"> Contact Us</a>
+                        <h6> Notre équipe</h6>
+                        <div class="block">
+                            <p>Nous sommes une équipe de 6 étudiants en 2èmes année de DUT informatique</p>
+                            <p>Ce site a été réalisé dans le cadre de notre projet de fin d'année</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="row">
-                    <div class="col-md-6 px-4">
-                        <h6> Help us</h6>
-                        <div class="row ">
-                            <div class="col-md-6">
-                                <ul>
-                                    <li> <a href="#">Home</a> </li>
-                                    <li> <a href="#">About</a> </li>
-                                    <li> <a href="#">Service</a> </li>
-                                    <li> <a href="#">Team</a> </li>
-                                    <li> <a href="#">Help</a> </li>
-                                    <li> <a href="#">Contact</a> </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-md-6 ">
                         <h6>Auteurs</h6>
-                        <ul>
-                            <li> <a href="#">Vincent NGUYEN</a></li>
-                            <li> <a href="#">Loïc LIM</a></li>
-                            <li> <a href="#">Aravindan COLBERT</a></li>
-                            <li> <a href="#">Bilal HAMICHE</a></li>
-                            <li> <a href="#">Tom BRUDER</a></li>
-                            <li> <a href="#">Victor VAKHITOV</a></li>
-                        </ul>
+                        <div class="block">
+                            <p>Loïc LIM<br>
+                            Vincent NGUYEN<br>
+                            Aravindan COLBERT<br>
+                            Bilal HAMICHE<br>
+                            Tom BRUDER<br>
+                            Victor VAKHITOV<br></p>
+                           </div>
                     </div>
-
-
-
-                    <div class='machine shake-slow'>
-                        <div class='shine'></div>
-                        <div class='top'>
-                            <div class='screwTop'></div>
-                            <div class='panels'>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                            </div>
-                        </div>
-                        <div class='screen'></div>
-                        <div class='table color'>
-                            <div class='butt'></div>
-                            <div class='stick'></div>
-                        </div>
-                        <div class='bottom color'>
-                            <div class='line'></div>
-                            <div class='line'></div>
-                            <div class='screw'></div>
-                            <div class='panels'>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                            </div>
-                            <div class='screwRight'></div>
+                    <div class="col-md-6 px-4">
+                        <h6> Nos contacts</h6>
+                        <div class="block">
+                            <p>IUT Paris Descartes</p>
+                            <p>143 Avenue de Versailles</p>
+                            <p>75016</p>
                         </div>
                     </div>
-
-                    <!-- Partie animation footer -->
-
-                    <div class='machine shake-slow'>
-                        <div class='shine'></div>
-                        <div class='top'>
-                            <div class='screwTop'></div>
-                            <div class='panels'>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                            </div>
-                        </div>
-                        <div class='screen'></div>
-                        <div class='table color'>
-                            <div class='butt'></div>
-                            <div class='stick'></div>
-                        </div>
-                        <div class='bottom color'>
-                            <div class='line'></div>
-                            <div class='line'></div>
-                            <div class='screw'></div>
-                            <div class='panels'>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                                <div class='panel'></div>
-                            </div>
-                            <div class='screwRight'></div>
-                        </div>
-                    </div>
-
-                    <!-- Partie animation footer -->
-
                 </div>
             </div>
         </div>
