--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -2,12 +2,12 @@
 
 <nav id="nav" class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
   <div class="container">
+    <img class ="logoneon" src="./img/logoneon.png">
     <p class="alpha">NO BRAIN NO GAIN</p><button aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse"
       type="button"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <img src="./img/logoneon.png" style="width: 50px;">
         <li class="nav-item active">
           <a class="nav-link" href="/">Accueil</a>
         </li>
