--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -17,8 +17,7 @@ body {
 	max-width: 100%;
 	margin-left: 175px;
 	margin-top: 50px;
-	
-	
+	margin-right: 90px;
 }
 
 footer {
@@ -50,7 +49,7 @@ footer h6:after {
 .block {
 	border-right: 1px solid #74cbe4;
 	height: 60%;
-	
+	padding-right: 20px;
 }
 
 
