--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,12 +1,5 @@
 /* Début footer */
 
-body {
-	font-family: 'Signika', sans-serif;
-}
-
-
-
-
 .bg-grey {
 	background: #292929;
 }
@@ -33,6 +26,7 @@ footer h6 {
 	font-family: 'Playfair Display', serif;
 	margin-bottom: 40px;
 	position: relative;
+	text-decoration: none;
 }
 
 footer h6:after {
@@ -50,6 +44,7 @@ footer h6:after {
 	border-right: 1px solid #74cbe4;
 	height: 60%;
 	padding-right: 20px;
+	text-decoration: none;
 }
 
 
