--- a/views/home.ejs
+++ b/views/home.ejs
@@ -133,7 +133,12 @@
 
     <div class="end"></div>
 
-    <canvas id="chart"></canvas>
+    <div class="chart">
+      <img src="./img/logo.png" alt="logo" id="logoChart">
+      <h1 class="chartTitle">Ici le tableau des scores des meilleurs joueurs de No Brain No Gain</h1>
+      <canvas id="chart"></canvas>
+    </div>
+    
 
     <!-- Fin du contenu de la page -->
 
