--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -98,7 +98,6 @@
                   <hr class="my-4">
                   <p>Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and
                     records all of his own music.</p>
-                  <a href="#">Show more</a>
                 </div>
               </div>
             </div>
@@ -108,25 +107,15 @@
               <div class="card-header bg-white border-0">
                 <div class="row align-items-center">
                   <div class="col-8">
-                    <h3 class="mb-0">My account</h3>
-                  </div>
-                  <div class="col-4 text-right">
-                    <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+                    <h3 class="mb-0">Mon profil</h3>
                   </div>
                 </div>
               </div>
               <div class="card-body">
                 <form>
-                  <h6 class="heading-small text-muted mb-4">User information</h6>
+                  <h6 class="heading-small text-muted mb-4">Mes informations</h6>
                   <div class="pl-lg-4">
                     <div class="row">
-                      <div class="col-lg-6">
-                        <div class="form-group focused">
-                          <label class="form-control-label" for="input-username">Username</label>
-                          <input type="text" id="input-username" class="form-control form-control-alternative"
-                            placeholder="Username" value="lucky.jesse">
-                        </div>
-                      </div>
                       <div class="col-lg-6">
                         <div class="form-group">
                           <label class="form-control-label" for="input-email">Email</label>
