--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -127,7 +127,7 @@
                     <div class="row">
                       <div class="col-lg-6">
                         <div class="form-group focused">
-                          <label class="form-control-label" for="input-first-name">Name</label>
+                          <label class="form-control-label" for="input-first-name">Nom</label>
                           <input type="text" id="input-first-name" class="form-control form-control-alternative"
                             placeholder="name" value="<%=user%>">
                         </div>
@@ -137,10 +137,10 @@
                   </div>
 
                   <!-- Description -->
-                  <h6 class="heading-small text-muted mb-4">About me</h6>
+                  <h6 class="heading-small text-muted mb-4">À propos de moi</h6>
                   <div class="pl-lg-4">
                     <div class="form-group focused">
-                      <label>About Me</label>
+                      <label>À propos de moi</label>
                       <textarea rows="4" class="form-control form-control-alternative"
                         placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
                     </div>
