--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,7 +280,7 @@ p a {
 .chartTitle {
 	text-align: center;
 	margin-left: auto;
-	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 80px;
 }
 
