--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -9,15 +9,15 @@
                     <div class="col-md-6 ">
                         <h6>No Brain No Gain</h6>
                         <div class="block">
-                            <p>No brain no gain, le site de jeux intéractif en ligne</p>
-                            <p>vient tester tes limites et te retourner le cerveau</p>
+                            <p>No Brain No Gain, le site de jeux intéractif en ligne</p>
+                            <p>Viens tester tes limites et te retourner le cerveau</p>
                         </div>
                     </div>
                     <div class="col-md-6 px-4">
                         <h6> Notre équipe</h6>
                         <div class="block">
                             <p>Nous sommes une équipe de 6 étudiants en 2èmes année de DUT informatique</p>
-                            <p>Ce site a été réalisé dans le cadre de notre projet de fin d'année</p>
+                            <p>Ce site a été réalisé dans le cadre d'un projet de fin d'année</p>
                         </div>
                     </div>
                 </div>
