--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -24,7 +24,7 @@
 
             <% if(isLoggedIn) { %>
               <li class="nav-item">
-                <a class="nav-link" href="/Profil">Profil</a>
+                <a class="nav-link" href="/Profil" id="profil">Profil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/logout">Déconnexion</a>
