--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -111,16 +111,15 @@
                   <div class="row">
                     <div class="col">
                       <label class="form-control-label" for="input-email">Email</label>
-                      <input type="email" id="input-email" name="emailModif" class="form-control form-control-alternative"
-                        placeholder="<%=mail%>">
+                      <input type="email" id="inputEmail" name="emailModif" class="form-control form-control-alternative"
+                        value="<%=mail%>" required disabled>
                     </div>
                   </div>
 
                   <div class="row">
                     <div class="col">
                       <label class="form-control-label" for="input-first-name">Nom</label>
-                      <input type="text" id="input-first-name" name="nameModif" class="form-control form-control-alternative"
-                        placeholder="<%=user%>">
+                      <input type="text" id="inputNom" name="nameModif" class="form-control form-control-alternative" required>
                     </div>
                   </div>
 
@@ -128,7 +127,7 @@
                     <div class="col">
                       <div class="form-group focused">
                         <label class="form-control-label" for="input-first-name">Mot de passe</label>
-                        <input type="password" id="input-first-name" name="pwdModif" placeholder="Votre ancien mot de passe" class="form-control form-control-alternative">
+                        <input type="password" name="pwdModif" placeholder="Votre ancien mot de passe / Nouveau mot de passe" class="form-control form-control-alternative" required>
                       </div>
                     </div>
                   </div>
@@ -138,7 +137,7 @@
                   <h6 class="heading-small text-muted mb-4">À propos de moi</h6>
                   <div class="">
                     <label>À propos de moi</label>
-                    <textarea rows="4" class="form-control form-control-alternative" name="aboutMeModif" id="aboutMeSection"></textarea>
+                    <textarea rows="4" class="form-control form-control-alternative" required name="aboutMeModif" id="aboutMeSection"></textarea>
                     <button type="submit">Modifier le profil</button>
                   </div>
                 </form>
