--- a/views/chess.ejs
+++ b/views/chess.ejs
@@ -53,7 +53,8 @@
         <script>
 
             let globalVariable = {
-                scoreChess: 0
+                scoreChess: 0,
+                player: ''
             }
 
             $('#rejouer').on('click', function () {
