--- a/views/chess.ejs
+++ b/views/chess.ejs
@@ -28,6 +28,7 @@
 
         <div class="menu" id="difficulty">
             <br>
+            <h1 class="titleD">Merci à Gautambajaj pour ce jeu !</h1>
             <h1 class="titleD">Choisissez une difficulté :</h1>
             <hr><br>
             <button type="button" class="btn easy btn-success btn-xlarge" id="easyBtn">Facile<br>(15 points)</button>
