--- a/views/connect4.ejs
+++ b/views/connect4.ejs
@@ -33,6 +33,7 @@
                 <div class="row justify-content-center">
                     <div class="col-12">
                         <div class="alert alert-info">
+                            <p>Merci à Parzibyte pour ce jeu !</p>
                             <strong>Joueur: </strong> {{currentPlayer === PLAYER_1s ? 'Player 1' : 'Player 2'}}
                             <br>
                             <img :src="cellImage(currentPlayer)" alt="" class="img-fluid" style="max-width: 70px;">
