--- a/views/dames.ejs
+++ b/views/dames.ejs
@@ -50,6 +50,7 @@
     </div> -->
         <div class="tab">
             <div class="title">Jeux de dames</div>
+            <h1 class="title">Merci à Nathanielslong pour ce jeu !</h1>
             <div class="board">
             </div>
             <div class="control">
