--- a/views/home.ejs
+++ b/views/home.ejs
@@ -91,7 +91,8 @@
                     class="img-fluid card-img-top" id="frame">
                   <h5 class="subTitleG">Dames</h5>
                   <p class="small text-muted mb-0" id="descriptG">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                    Venez vous relaxer de tout stress notre jeux de dames !<br>
+                    codé par Nathanieslong
                   </p>
                   <% if(isLoggedIn) { %>
                     <a href="/dames"><button id="damesBtn" class="buttonGames"><span>Jouez !</span></button></a>
@@ -112,7 +113,7 @@
                   <h5 class="subTitleG">Échecs</h5>
                   <p class="small text-muted mb-0" id="descriptG">
                     Êtes-vous un stratège aguerri ? Imbattable ?<br> Venez nous le prouver
-                    avec le jeu de stratégie indémodable que sont les échecs !
+                    avec le jeu de stratégie indémodable que sont les échecs, codé par Gautambajaj !
                   </p>
                   <% if(isLoggedIn) { %>
                     <a href="/echecs"><button id="chessBtn" class="buttonGames"><span>Jouez !</span></button></a>
@@ -129,8 +130,8 @@
                     class="img-fluid card-img-top" id="frame">
                   <h5 class="subTitleG">Puissance 4</h5>
                   <p class="small text-muted mb-0" id="descriptG">
-                    Venez passez votre temps dans notre magnifique puissance 4!<br>
-                    Attention vous ne gagneree aucun point si vous jouez en multijoueurs!
+                    Venez vous amuser dans notre magnifique puissance 4 !<br>
+                    codé par Parzibyte
                   </p>
                   <% if(isLoggedIn) { %>
                     <a href="/puissance4"><button id="connect4Btn" class="buttonGames"><span>Jouez !</span></button></a>
