--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -2,32 +2,172 @@
 <html>
 
 <head>
-	<title> sudoku test</title>
-	<meta charset="utf-8" />
+	<meta charset="UTF-8">
+	<title>No Brain No Gain</title>
+	<link rel="icon" type="image/png" href="./img/logo.png">
+
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+	<!-- NavBar -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Audiowide|Iceland|Monoton|Pacifico|Press+Start+2P|Vampiro+One'
+		rel='stylesheet' type='text/css'>
+
+	<script src="./js/games/sudoku/sudoku.js"></script>
+	<script src="./js/games/sudoku/sudokuP.js"></script>
+
+	<!-- Fichiers CSS -->
 	<link rel="stylesheet" href="./css/gamesCSS/sudoku.css" />
-	<script type="application/javascript" src="./js/games/sudoku.js"></script>
+	<link href="./css/navbar.css" rel="stylesheet">
+
 </head>
 
 <body>
-	<div class="container"></div>
+
+	<%- include('../views/layouts/navbar.ejs', {button: '' , isLoggedIn: true }); -%>
+
+		<div class="sudokuContainer">
+			<div class="mistakeScreen">
+				<center class="mistakeText">Pffft. Looks like you made a mistake somewhere.</center>
+			</div>
+			<div class="winScreen">
+				<center class="winText">You're a winner. That's pretty neat.</center>
+			</div>
+			<section id="sudokuPuzzle">
+				<div id='numPad'>
+					<center>
+						<div>
+							<span id="np1" class='padNumbers' value='1'>1</span>
+							<span id="np2" class='padNumbers' value='2'>2</span>
+							<span id="np3" class='padNumbers' value='3'>3</span>
+							<span id="np4" class='padNumbers' value='4'>4</span>
+							<span id="np5" class='padNumbers' value='5'>5</span>
+						</div>
+						<div>
+							<span id="np6" class='padNumbers' value='6'>6</span>
+							<span id="np7" class='padNumbers' value='7'>7</span>
+							<span id="np8" class='padNumbers' value='8'>8</span>
+							<span id="np9" class='padNumbers' value='9'>9</span>
+							<span id="npx" class='padNumbers' value='x'>x</span>
+						</div>
+					</center>
+				</div>
+				<center>
+					<form id="formwrapper">
+						<span id="newGame" class="formbutton">Give me another</span>
+						<span id="solve" class="formbutton">Give up</span>
+					</form>
+				</center>
+				<table class="inner container" align="center" id="grid">
+					<tr>
+						<td id='t0x0'></td>
+						<td id='t0x1'></td>
+						<td id='t0x2'></td>
+						<td id='t0x3'></td>
+						<td id='t0x4'></td>
+						<td id='t0x5'></td>
+						<td id='t0x6'></td>
+						<td id='t0x7'></td>
+						<td id='t0x8'></td>
+					</tr>
+					<tr>
+						<td id='t1x0'></td>
+						<td id='t1x1'></td>
+						<td id='t1x2'></td>
+						<td id='t1x3'></td>
+						<td id='t1x4'></td>
+						<td id='t1x5'></td>
+						<td id='t1x6'></td>
+						<td id='t1x7'></td>
+						<td id='t1x8'></td>
+					</tr>
+					<tr>
+						<td id='t2x0'></td>
+						<td id='t2x1'></td>
+						<td id='t2x2'></td>
+						<td id='t2x3'></td>
+						<td id='t2x4'></td>
+						<td id='t2x5'></td>
+						<td id='t2x6'></td>
+						<td id='t2x7'></td>
+						<td id='t2x8'></td>
+					</tr>
 
 
-	<div id="Message"></div>
-	<div id="controls">
-		<div id="difficulty">
-			<input type="radio" id="difficultyChoice1" name="difficulty" value="easy">
-			<label for="difficultyChoice1">Facile</label>
-			<input type="radio" id="difficultyChoice2" name="difficulty" value="normal" checked="true">
-			<label for="difficultyChoice2">Normal</label>
-			<input type="radio" id="difficultyChoice3" name="difficulty" value="hard">
-			<label for="difficultyChoice3">Difficile</label>
+					<tr>
+						<td id='t3x0'></td>
+						<td id='t3x1'></td>
+						<td id='t3x2'></td>
+						<td id='t3x3'></td>
+						<td id='t3x4'></td>
+						<td id='t3x5'></td>
+						<td id='t3x6'></td>
+						<td id='t3x7'></td>
+						<td id='t3x8'></td>
+					</tr>
+					<tr>
+						<td id='t4x0'></td>
+						<td id='t4x1'></td>
+						<td id='t4x2'></td>
+						<td id='t4x3'></td>
+						<td id='t4x4'></td>
+						<td id='t4x5'></td>
+						<td id='t4x6'></td>
+						<td id='t4x7'></td>
+						<td id='t4x8'></td>
+					</tr>
+					<tr>
+						<td id='t5x0'></td>
+						<td id='t5x1'></td>
+						<td id='t5x2'></td>
+						<td id='t5x3'></td>
+						<td id='t5x4'></td>
+						<td id='t5x5'></td>
+						<td id='t5x6'></td>
+						<td id='t5x7'></td>
+						<td id='t5x8'></td>
+					</tr>
+
+
+					<tr>
+						<td id='t6x0'></td>
+						<td id='t6x1'></td>
+						<td id='t6x2'></td>
+						<td id='t6x3'></td>
+						<td id='t6x4'></td>
+						<td id='t6x5'></td>
+						<td id='t6x6'></td>
+						<td id='t6x7'></td>
+						<td id='t6x8'></td>
+					</tr>
+					<tr>
+						<td id='t7x0'></td>
+						<td id='t7x1'></td>
+						<td id='t7x2'></td>
+						<td id='t7x3'></td>
+						<td id='t7x4'></td>
+						<td id='t7x5'></td>
+						<td id='t7x6'></td>
+						<td id='t7x7'></td>
+						<td id='t7x8'></td>
+					</tr>
+					<tr>
+						<td id='t8x0'></td>
+						<td id='t8x1'></td>
+						<td id='t8x2'></td>
+						<td id='t8x3'></td>
+						<td id='t8x4'></td>
+						<td id='t8x5'></td>
+						<td id='t8x6'></td>
+						<td id='t8x7'></td>
+						<td id='t8x8'></td>
+					</tr>
+				</table>
+			</section>
 		</div>
-		<div id="other">
-			<button type="button" class="btn primary" data-action="newGame">Nouvelle partie</button>
-			<button type="button" class="btn primary" data-action="solve">Solution</button>
-			<button type="button" class="btn primary" data-action="validate">Valider</button>
-		</div>
-	</div>
 </body>
-
 </html>
