--- a/public/css/gamesCSS/sudoku.css
+++ b/public/css/gamesCSS/sudoku.css
@@ -20,6 +20,10 @@ img.logo {
 	background-color: #161b46;
 	border-radius: 50px;
 	margin-top: 200px;
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 50px;
 }
 
 table.container {
@@ -138,6 +142,9 @@ td.emptyCell {
 
 #sudokuPuzzle {
 	position: relative;
+	width: 600px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .formbutton {
