--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -57,6 +57,7 @@
 					</center>
 				</div>
 				<center>
+					<h1 style="color: white; font-family: Rockwell;">25 points</h1>
 					<form id="formwrapper">
 						<span id="newGame" class="formbutton">Give me another</span>
 						<span id="solve" class="formbutton">Give up</span>
